--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-numpy
-tensorflow
-opencv-python
-pandas
-matplotlib
-PIL
+numpy==1.21.2
+matplotlib==3.4.3
+tensorflow==2.5.0
+pandas==1.3.3
+scikit_learn==0.24.2
